# mulcam-aws-infra-automation-terraform

./: .gitignore  11-aws-practical-project-final-report.md  11-aws-practical-project-refactoring-task-report.md  AGENTS.md  CLAUDE.md  README.md  TerraformWorkshop-Restricted-us-east-1.json  aws-daily-cost-report.py  aws-resource-audit.py  aws-resource.py  aws-user-admin-setup.py  aws-workshop-teardown.py  claude-progress.txt  feature-list.json
01_aws-terraform-overview/: wsl-terraform-setup.sh
08_ecs-cluster-mgmt/: .gitignore
my-code/: .gitignore
terraform-visualizer/: .gitignore  Dockerfile  README.md  run.sh  (+3 more)
workshop-management/: .gitignore  DEVELOPMENT.md  README.md  TerraformWorkshop-Restricted-us-east-1.json  aws-activate-cost-tags.py  aws-limit-check.py  aws-resource-audit.py  aws-workshop-setup.py  awsw.py  plan.md  pyproject.toml  requirements.txt  setup.cfg  terraform-resource-types.yaml
workshop-management/.claude/: settings.json
workshop-management/.claude/commands/: deploy.md
workshop-management/.claude/scripts/: deploy.sh
workshop-management/commands/: __init__.py  admin.py  audit.py  check.py  clean.py  cloudfront.py  cost.py  creds.py  nuke.py  setup.py  status.py  tag.py  teardown.py  vpc.py  workflow.py
workshop-management/commands/cleaners/: __init__.py  compute.py  database.py  iam.py  misc.py  network.py  storage.py
workshop-management/docs/superpowers/specs/: 2026-04-10-workshop-management-refactor-design.md
workshop-management/utils/: __init__.py  constants.py  credentials.py  iam_helpers.py  output.py  parallel.py  session.py
(+452 files in other folders)
