[metadata]
name = awsw
version = 0.1.0
description = AWS 워크샵 운영 CLI — 계정 관리, 리소스 감사, 비용 모니터링
python_requires = >=3.9

[options]
# awsw.py 단일 모듈 + commands/, utils/ 패키지 포함
py_modules = awsw
packages = find:
install_requires =
    boto3
    click
    rich
    pyyaml

[options.packages.find]
include =
    commands*
    utils*

[options.entry_points]
console_scripts =
    awsw = awsw:cli
